private_server/guard/CELL-25/Q-49/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-25/Q-49/25-49.py", line 17
    inventory["gold"]: +50
                     ^
SyntaxError: invalid syntax
